--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,16 +40,13 @@ jobs:
           REPOSITORY: ${{ vars.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
 
-      - name: Set up kubeconfig
-        run: |
-          echo "${{ secrets.KUBE_CERT }}" > ca.crt
-          kubectl config set-cluster ${KUBE_CLUSTER} --certificate-authority=./ca.crt --server=https://${KUBE_CLUSTER}
-          kubectl config set-credentials deploy-user --token=${{ secrets.KUBE_TOKEN }}
-          kubectl config set-context ${KUBE_CLUSTER} --cluster=${KUBE_CLUSTER} --user=deploy-user --namespace=${KUBE_NAMESPACE}
-          kubectl config use-context ${KUBE_CLUSTER}
-        env:
-          KUBE_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
-          KUBE_CLUSTER: ${{ secrets.KUBE_CLUSTER }}
+      - name: Authenticate to cluster
+        uses: ministryofjustice/laa-reusable-github-actions/.github/actions/authenticate_to_cluster@main
+        with:
+          kube-cert: ${{ secrets.KUBE_CERT }}
+          kube-token: ${{ secrets.KUBE_TOKEN }}
+          kube-cluster: ${{ secrets.KUBE_CLUSTER }}
+          kube-namespace: ${{ secrets.KUBE_NAMESPACE }}
 
       - name: Deploy using Helm to UAT
         run: ./scripts/deploy.sh uat
@@ -96,13 +93,13 @@ jobs:
           REPOSITORY: ${{ vars.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ github.sha }}
 
-      - name: Set up kubeconfig
-        run: |
-          echo "${{ secrets.KUBE_CERT }}" > ca.crt
-          kubectl config set-cluster ${KUBE_CLUSTER} --certificate-authority=./ca.crt --server=https://${KUBE_CLUSTER}
-          kubectl config set-credentials deploy-user --token=${{ secrets.KUBE_TOKEN }}
-          kubectl config set-context ${KUBE_CLUSTER} --cluster=${KUBE_CLUSTER} --user=deploy-user --namespace=${KUBE_NAMESPACE}
-          kubectl config use-context ${KUBE_CLUSTER}
+      - name: Authenticate to cluster
+        uses: ministryofjustice/laa-reusable-github-actions/.github/actions/authenticate_to_cluster@d61e0cf24795b75f719a8981a4dc21e1334a1455
+        with:
+          kube-cert: ${{ secrets.KUBE_CERT }}
+          kube-token: ${{ secrets.KUBE_TOKEN }}
+          kube-cluster: ${{ secrets.KUBE_CLUSTER }}
+          kube-namespace: ${{ secrets.KUBE_NAMESPACE }}
         env:
           KUBE_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
           KUBE_CLUSTER: ${{ secrets.KUBE_CLUSTER }}
@@ -132,7 +129,8 @@ jobs:
           run: |
             curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
             chmod +x get_helm.sh
-            ./get_helm.sh           
+            ./get_helm.sh
+
         - name: Set up AWS credentials for ECR and Kubernetes
           uses: aws-actions/configure-aws-credentials@v4
           with:
@@ -140,6 +138,7 @@ jobs:
             aws-region: ${{ vars.ECR_REGION }}
         - uses: aws-actions/amazon-ecr-login@v2
           id: login-ecr
+
         - name: Build and push Docker image
           run: |
             docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
@@ -148,16 +147,15 @@ jobs:
             REGISTRY: ${{ steps.login-ecr.outputs.registry }}
             REPOSITORY: ${{ vars.ECR_REPOSITORY }}
             IMAGE_TAG: ${{ github.sha }}
-        - name: Set up kubeconfig
-          run: |
-            echo "${{ secrets.KUBE_CERT }}" > ca.crt
-            kubectl config set-cluster ${KUBE_CLUSTER} --certificate-authority=./ca.crt --server=https://${KUBE_CLUSTER}
-            kubectl config set-credentials deploy-user --token=${{ secrets.KUBE_TOKEN }}
-            kubectl config set-context ${KUBE_CLUSTER} --cluster=${KUBE_CLUSTER} --user=deploy-user --namespace=${KUBE_NAMESPACE}
-            kubectl config use-context ${KUBE_CLUSTER}
-          env:
-            KUBE_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
-            KUBE_CLUSTER: ${{ secrets.KUBE_CLUSTER }}
+
+        - name: Authenticate to cluster
+          uses: ministryofjustice/laa-reusable-github-actions/.github/actions/authenticate_to_cluster@d61e0cf24795b75f719a8981a4dc21e1334a1455
+          with:
+            kube-cert: ${{ secrets.KUBE_CERT }}
+            kube-token: ${{ secrets.KUBE_TOKEN }}
+            kube-cluster: ${{ secrets.KUBE_CLUSTER }}
+            kube-namespace: ${{ secrets.KUBE_NAMESPACE }}
+
         - name: Deploy using Helm to Production
           run: ./scripts/deploy.sh production
           env:
@@ -167,6 +165,7 @@ jobs:
             GITHUB_SHA: ${{ github.sha }}
             GITHUB_REF_NAME: ${{ github.ref_name }}
             K8S_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
+            
         - name: Notify deployment failure
           if: failure()
           run: |
