--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,14 +31,26 @@ jobs:
       - uses: aws-actions/amazon-ecr-login@v2
         id: login-ecr
 
-      - name: Build and push Docker image
-        run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: ${{ vars.ECR_REPOSITORY }}
-          IMAGE_TAG: ${{ github.sha }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          install: true
+
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: Build and push image with local action
+        uses: ./.github/actions/build_and_push
+        with:
+          image_registry: ${{ secrets.ECR_REGISTRY_URL }}
+          image_repo: ${{ vars.ECR_REPOSITORY }}
+          dockerfile_path: Dockerfile
+          image_tag: ${{ github.sha }}
 
       - name: Authenticate to cluster
         uses: ministryofjustice/laa-reusable-github-actions/.github/actions/authenticate_to_cluster@main
@@ -165,7 +177,7 @@ jobs:
             GITHUB_SHA: ${{ github.sha }}
             GITHUB_REF_NAME: ${{ github.ref_name }}
             K8S_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
-            
+
         - name: Notify deployment failure
           if: failure()
           run: |
