add ingress for main deployments

--- a/deploy/laa-manage-your-civil-cases/values/production.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/production.yaml
@@ -35,6 +35,18 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+  ingress:
+  enabled: true
+  hosts:
+    - host: manage-your-civil-cases.cloud-platform.service.justice.gov.uk
+      secret: false
+      paths:
+        - path: /
+          pathType: Prefix
+  annotations:
+    external-dns.alpha.kubernetes.io/set-identifier: "manage-civil-cases-laa-manage-your-civil-cases-laa-manage-your-civil-cases-production-green"
+    external-dns.alpha.kubernetes.io/aws-weight: "100"
+
 service:
   type: ClusterIP
   port: 80
