--- a/deploy/laa-manage-your-civil-cases/values/staging.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/staging.yaml
@@ -39,20 +39,16 @@ service:
   port: 80
 
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  enabled: true
   hosts:
-    - host: chart-example.local
+    - host: manage-your-civil-cases-staging.cloud-platform.service.justice.gov.uk
+      secret: false
       paths:
         - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+          pathType: Prefix
+  annotations:
+    external-dns.alpha.kubernetes.io/set-identifier: "manage-civil-cases-laa-manage-your-civil-cases-laa-manage-your-civil-cases-staging-green"
+    external-dns.alpha.kubernetes.io/aws-weight: "100"
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
