add service name to values for stg and prod deploys

--- a/deploy/laa-manage-your-civil-cases/values/production.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/production.yaml
@@ -35,6 +35,9 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+env:
+  SERVICE_NAME: "Manage your civil cases"
+  
   ingress:
   enabled: true
   hosts:
