--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,7 @@ jobs:
   deploy-uat:
     name: Deploy to UAT
     runs-on: ubuntu-latest
+    environment: uat
     needs:
       - code-linting
       - code-security-audit
@@ -118,6 +119,7 @@ jobs:
     name: Deploy to Staging
     needs: deploy-uat
     if: github.ref_name == 'main'
+    environment: staging
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -167,6 +169,7 @@ jobs:
   deploy-production:
     name: Deploy to Production
     needs: deploy-staging
+    environment: production
     if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     permissions:
