--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,6 +115,19 @@ jobs:
           GITHUB_REF_NAME: ${{ github.ref_name }}
           K8S_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
 
+      - name: Notify UAT deployment failure
+        if: failure()
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Deployment to Production failed!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      - name: Notify deployment success   
+        if: success()
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Deployment to Production was successful!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
   deploy-staging:
     name: Deploy to Staging
     needs: deploy-uat
@@ -166,6 +179,19 @@ jobs:
           GITHUB_REF_NAME: ${{ github.ref_name }}
           K8S_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
 
+      - name: Notify STAGING deployment failure
+        if: failure()
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Deployment to Production failed!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      - name: Notify deployment success   
+        if: success()
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Deployment to Production was successful!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
   deploy-production:
     name: Deploy to Production
     needs: deploy-staging
@@ -213,3 +239,15 @@ jobs:
             GITHUB_REF_NAME: ${{ github.ref_name }}
             K8S_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
 
+        - name: Notify PRODUCTION deployment failure
+          if: failure()
+          run: |
+            curl -X POST -H 'Content-type: application/json' --data '{"text":"Deployment to Production failed!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+          env:
+            SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        - name: Notify deployment success   
+          if: success()
+          run: |
+            curl -X POST -H 'Content-type: application/json' --data '{"text":"Deployment to Production was successful!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+          env:
+            SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
