--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,19 +115,6 @@ jobs:
           GITHUB_REF_NAME: ${{ github.ref_name }}
           K8S_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
 
-      - name: Notify UAT deployment failure
-        if: failure()
-        run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"Deployment to Production failed!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      - name: Notify deployment success   
-        if: success()
-        run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"Deployment to Production was successful!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-
   deploy-staging:
     name: Deploy to Staging
     needs: deploy-uat
@@ -179,16 +166,10 @@ jobs:
           GITHUB_REF_NAME: ${{ github.ref_name }}
           K8S_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
 
-      - name: Notify STAGING deployment failure
+      - name: Notify deployment failure
         if: failure()
         run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"Deployment to Production failed!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      - name: Notify deployment success   
-        if: success()
-        run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"Deployment to Production was successful!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Manage Civil Cases deployment to Staging failed!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
@@ -239,15 +220,9 @@ jobs:
             GITHUB_REF_NAME: ${{ github.ref_name }}
             K8S_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
 
-        - name: Notify PRODUCTION deployment failure
+        - name: Notify deployment failure
           if: failure()
           run: |
-            curl -X POST -H 'Content-type: application/json' --data '{"text":"Deployment to Production failed!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
-          env:
-            SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        - name: Notify deployment success   
-          if: success()
-          run: |
-            curl -X POST -H 'Content-type: application/json' --data '{"text":"Deployment to Production was successful!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+            curl -X POST -H 'Content-type: application/json' --data '{"text":"Manage Civil Cases deployment to Production failed!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
           env:
             SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
