--- a/deploy/laa-manage-your-civil-cases/values/staging.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/staging.yaml
@@ -65,6 +65,8 @@ resources: {}
 
 env:
   SERVICE_NAME: "Manage your civil cases"
+  SERVICE_PHASE: "Alpha"
+  DEPARTMENT_NAME: "LAA Digital"
   
 livenessProbe:
   httpGet:
