--- a/package.json
+++ b/package.json
@@ -46,17 +46,24 @@
     "esbuild": "^0.25.2",
     "esbuild-plugin-copy": "^2.1.1",
     "esbuild-sass-plugin": "^3.3.1",
-    "eslint": "^9.25.0",
+    "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-jsdoc": "^50.6.9",
     "eslint-plugin-prettier": "^5.2.6",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
     "livereload": "^0.9.3",
     "middleware-axios": "^3.0.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "sass": "^1.86.3"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
