--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,6 @@ jobs:
   code-linting:
     name: Code Linting
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -29,7 +28,6 @@ jobs:
   code-security-audit:
     name: Code Security Audit
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -44,7 +42,7 @@ jobs:
 
       - name: Run security audit
         run: npm audit
-  
+
   snyk:
     name: Snyk Security Scan
     uses: ministryofjustice/laa-reusable-github-actions/.github/workflows/snyk.yml@73a98b3336f71a21c46e6b588cd3afaaab052649
@@ -53,19 +51,17 @@ jobs:
     secrets:
       snyk_token: ${{ secrets.SNYK_TOKEN }}
 
-  deploy-uat:
-    name: Deploy to UAT
+  build-image:
+    name: Build Docker Image
     runs-on: ubuntu-latest
-    environment: uat
-    needs:
-      - code-linting
-      - code-security-audit
-      - snyk
+    outputs:
+      image_tag: ${{ github.sha }}
     permissions:
       id-token: write
       contents: read
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up AWS credentials for ECR and Kubernetes
         uses: aws-actions/configure-aws-credentials@ececac1a45f3b08a01d2dd070d28d111c5fe6722
@@ -97,6 +93,21 @@ jobs:
           dockerfile_path: Dockerfile
           image_tag: ${{ github.sha }}
 
+  deploy-uat:
+    name: Deploy feature branch to UAT
+    runs-on: ubuntu-latest
+    environment: uat
+    needs:
+      - code-linting
+      - code-security-audit
+      - snyk
+      - build-image
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+
       - name: Authenticate to cluster
         uses: ministryofjustice/laa-reusable-github-actions/.github/actions/authenticate_to_cluster@d61e0cf24795b75f719a8981a4dc21e1334a1455
         with:
@@ -110,7 +121,7 @@ jobs:
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: ${{ vars.ECR_REPOSITORY }}
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: ${{ needs.build-image.outputs.image_tag }}
           GITHUB_SHA: ${{ github.sha }}
           GITHUB_REF_NAME: ${{ github.ref_name }}
           K8S_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
@@ -127,24 +138,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up AWS credentials for ECR and Kubernetes
-        uses: aws-actions/configure-aws-credentials@ececac1a45f3b08a01d2dd070d28d111c5fe6722
-        with:
-          role-to-assume: ${{ secrets.ECR_ROLE_TO_ASSUME }}
-          aws-region: ${{ vars.ECR_REGION }}
-
-      - uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076
-        id: login-ecr
-
-      - name: Build and push Docker image
-        run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: ${{ vars.ECR_REPOSITORY }}
-          IMAGE_TAG: ${{ github.sha }}
-
       - name: Authenticate to cluster
         uses: ministryofjustice/laa-reusable-github-actions/.github/actions/authenticate_to_cluster@d61e0cf24795b75f719a8981a4dc21e1334a1455
         with:
@@ -152,26 +145,16 @@ jobs:
           kube-token: ${{ secrets.KUBE_TOKEN }}
           kube-cluster: ${{ secrets.KUBE_CLUSTER }}
           kube-namespace: ${{ secrets.KUBE_NAMESPACE }}
-        env:
-          KUBE_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
-          KUBE_CLUSTER: ${{ secrets.KUBE_CLUSTER }}
 
       - name: Deploy using Helm to Staging
         run: ./scripts/deploy.sh staging
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: ${{ vars.ECR_REPOSITORY }}
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: ${{ needs.build-image.outputs.image_tag }}
           GITHUB_SHA: ${{ github.sha }}
           GITHUB_REF_NAME: ${{ github.ref_name }}
           K8S_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
-
-      - name: Notify deployment failure
-        if: failure()
-        run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"Manage Civil Cases deployment to Staging failed!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
   deploy-production:
     name: Deploy to Production
@@ -180,49 +163,32 @@ jobs:
     if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     permissions:
-        id-token: write
-        contents: read
+      id-token: write
+      contents: read
     steps:
-        - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-        - name: Set up AWS credentials for ECR and Kubernetes
-          uses: aws-actions/configure-aws-credentials@ececac1a45f3b08a01d2dd070d28d111c5fe6722
-          with:
-            role-to-assume: ${{ secrets.ECR_ROLE_TO_ASSUME }}
-            aws-region: ${{ vars.ECR_REGION }}
-        - uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076
-          id: login-ecr
+      - name: Authenticate to cluster
+        uses: ministryofjustice/laa-reusable-github-actions/.github/actions/authenticate_to_cluster@d61e0cf24795b75f719a8981a4dc21e1334a1455
+        with:
+          kube-cert: ${{ secrets.KUBE_CERT }}
+          kube-token: ${{ secrets.KUBE_TOKEN }}
+          kube-cluster: ${{ secrets.KUBE_CLUSTER }}
+          kube-namespace: ${{ secrets.KUBE_NAMESPACE }}
 
-        - name: Build and push Docker image
-          run: |
-            docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-            docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-          env:
-            REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-            REPOSITORY: ${{ vars.ECR_REPOSITORY }}
-            IMAGE_TAG: ${{ github.sha }}
+      - name: Deploy using Helm to Production
+        run: ./scripts/deploy.sh production
+        env:
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REPOSITORY: ${{ vars.ECR_REPOSITORY }}
+          IMAGE_TAG: ${{ needs.build-image.outputs.image_tag }}
+          GITHUB_SHA: ${{ github.sha }}
+          GITHUB_REF_NAME: ${{ github.ref_name }}
+          K8S_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
 
-        - name: Authenticate to cluster
-          uses: ministryofjustice/laa-reusable-github-actions/.github/actions/authenticate_to_cluster@d61e0cf24795b75f719a8981a4dc21e1334a1455
-          with:
-            kube-cert: ${{ secrets.KUBE_CERT }}
-            kube-token: ${{ secrets.KUBE_TOKEN }}
-            kube-cluster: ${{ secrets.KUBE_CLUSTER }}
-            kube-namespace: ${{ secrets.KUBE_NAMESPACE }}
-
-        - name: Deploy using Helm to Production
-          run: ./scripts/deploy.sh production
-          env:
-            REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-            REPOSITORY: ${{ vars.ECR_REPOSITORY }}
-            IMAGE_TAG: ${{ github.sha }}
-            GITHUB_SHA: ${{ github.sha }}
-            GITHUB_REF_NAME: ${{ github.ref_name }}
-            K8S_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
-
-        - name: Notify deployment failure
-          if: failure()
-          run: |
-            curl -X POST -H 'Content-type: application/json' --data '{"text":"Manage Civil Cases deployment to Production failed!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
-          env:
-            SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      - name: Notify deployment failure
+        if: failure()
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Manage Civil Cases deployment to Production failed!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
