--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "chokidar": "4.0.3",
+    "chokidar": "3.6.0",
     "connect-livereload": "^0.6.1",
     "esbuild": "^0.25.2",
     "esbuild-plugin-copy": "^2.1.1",
@@ -60,7 +60,12 @@
     "rimraf": "^6.0.1",
     "sass": "^1.86.3"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx.mjs,cjs}": ["eslint --fix"]
+    "*.js": "eslint --fix"
   }
 }
