pass registry to deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       image_tag: ${{ github.sha }}
+      registry: ${{ steps.login-ecr.outputs.registry }} 
     permissions:
       id-token: write
       contents: read
@@ -119,7 +120,7 @@ jobs:
       - name: Deploy using Helm to UAT
         run: ./scripts/deploy.sh uat
         env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          REGISTRY: ${{ needs.build-image.outputs.registry }} 
           REPOSITORY: ${{ vars.ECR_REPOSITORY }}
           IMAGE_TAG: ${{ needs.build-image.outputs.image_tag }}
           GITHUB_SHA: ${{ github.sha }}
