--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -1,5 +1,3 @@
-# Customise this file to suit your pipeline and repository setup.
-# Ensure this file aligns with your project requirements, as it may not suit all use cases.
 name: Publish documentation
 
 on:
@@ -41,8 +39,9 @@ jobs:
           mv docs/* .
           rm -rf docs
       - name: Compile Markdown to HTML and create artifact
+        # This is not in th repo, but in the image
         run: |
-          /scripts/deploy.sh
+          /scripts/deploy.sh 
       - name: Upload artifact to be published
         uses: actions/upload-artifact@v4
         with:
@@ -67,6 +66,7 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
+  # This job checks that all the pages/ images you link to on your documentation site exist and do not return 404s etc.
   url-check:
     needs: deploy
     runs-on: ubuntu-latest
@@ -81,5 +81,4 @@ jobs:
           cd github-pages
           tar -xvf artifact.tar
           npm install linkinator
-          npx linkinator . --recurse --markdown \
-            --skip https://moj-documentation-template-civil-case-api.cloud-platform.service.justice.gov.uk/
+          npx linkinator . --recurse --markdown
