--- a/docs/config/tech-docs.yml
+++ b/docs/config/tech-docs.yml
@@ -1,18 +1,31 @@
----
-# https://github.com/alphagov/tech-docs-gem/blob/main/example/config/tech-docs.yml
+host: https://ministryofjustice.github.io/laa-manage-your-civil-cases
 
-host: https://ministryofjustice.github.io/template-documentation-site
-show_govuk_logo: false
-service_name: Template Documentation Site
-service_link: /
+# Header-related options
+show_govuk_logo: true
+service_name: Manage your Civil Cases (MCC)
+service_link: https://ministryofjustice.github.io/laa-manage-your-civil-cases
+phase: Alpha
+
+# Links to show on right-hand-side of header
 header_links:
+
+# Enables search functionality. This indexes pages only and is not recommended for single-page sites.
 enable_search: true
+
+# Enable collapsible navigation in the sidebar
 collapsible_nav: true
+
+# Table of contents depth – how many levels to include in the table of contents.
+# If your ToC is too long, reduce this number and we'll only show higher-level
+# headings.
 max_toc_heading_level: 3
+
+# Prevent robots from indexing (e.g. whilst in development)
 prevent_indexing: true
-show_contribution_banner: true
-github_repo: ministryofjustice/template-documentation-site
+
+show_contribution_banner: false
+github_repo: ministryofjustice/laa-manage-your-civil-cases
 github_branch: main
-full_service_name: Template Documentation Site
+full_service_name: Manage your Civil Cases (MCC)
 show_expiry: true
 show_review_banner: true
