--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -154,6 +154,13 @@ jobs:
           GITHUB_REF_NAME: ${{ github.ref_name }}
           K8S_NAMESPACE: ${{ secrets.KUBE_NAMESPACE }}
 
+      - name: Notify deployment failure
+        if: failure()
+        run: |
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Manage Civil Cases deployment to Staging failed!"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
   deploy-production:
     name: Deploy to Production
     needs: deploy-staging
