--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -1,5 +1,3 @@
-# Customise this file to suit your pipeline and repository setup.
-# Ensure this file aligns with your project requirements, as it may not suit all use cases.
 name: Publish documentation
 
 on:
@@ -41,6 +39,7 @@ jobs:
           mv docs/* .
           rm -rf docs
       - name: Compile Markdown to HTML and create artifact
+        # Script to deploy is not in the repo, but in this image: `ministryofjustice/tech-docs-github-pages-publisher:v3`
         run: |
           /scripts/deploy.sh
       - name: Upload artifact to be published
@@ -67,6 +66,7 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
+  # This job checks that all the pages/ images you link to on your documentation site exist and do not return 404s etc.
   url-check:
     needs: deploy
     runs-on: ubuntu-latest
@@ -81,5 +81,4 @@ jobs:
           cd github-pages
           tar -xvf artifact.tar
           npm install linkinator
-          npx linkinator . --recurse --markdown \
-            --skip https://moj-documentation-template-civil-case-api.cloud-platform.service.justice.gov.uk/
+          npx linkinator . --recurse --markdown
