If applied, this uses the same syntax as

--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -81,4 +81,5 @@ jobs:
           cd github-pages
           tar -xvf artifact.tar
           npm install linkinator
-          npx linkinator . --recurse --markdown --exclude "govuk-large.png"
+          npx linkinator . --recurse --markdown \
+            --skip https://ministryofjustice.github.io/laa-manage-your-civil-cases/images/govuk-large.png
