--- a/deploy/laa-manage-your-civil-cases/values/uat.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/uat.yaml
@@ -68,12 +68,14 @@ livenessProbe:
     path: /status
     port: http
   initialDelaySeconds: 30
+  periodSeconds: 60
 
 readinessProbe:
   httpGet:
     path: /health
     port: http
   initialDelaySeconds: 30
+  periodSeconds: 60
 
 env:
   SERVICE_NAME: "Manage your civil cases"
