--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,9 @@
 		"skipLibCheck": true, // Skip type checking of declaration files
 		"resolveJsonModule": true,
 		"allowSyntheticDefaultImports": true, // Allow default imports from modules with no default export
-		"noImplicitAny": false, // Be permissive initially
-		"strict": false, // Add strictness gradually
-		"forceConsistentCasingInFileNames": false, // Be permissive initially
+		"noImplicitAny": true, // Disallow implicit any types
+		"strict": true, // Enable all strict type-checking options
+		"forceConsistentCasingInFileNames": true, // Disallow inconsistently-cased references to the same file
 		"baseUrl": ".",
 		"paths": {
 			"#*": ["./*"]
