--- a/deploy/laa-manage-your-civil-cases/values/production.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/production.yaml
@@ -17,7 +17,6 @@ nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
-serviceAccount:
   create: false
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
@@ -38,9 +37,21 @@ securityContext: {}
   # runAsUser: 1000
 
 env:
-  SERVICE_NAME: "Manage your civil cases"
-  SERVICE_PHASE: "Alpha"
-  DEPARTMENT_NAME: "LAA Digital"
+  # These will be overridden by deploy.sh with values from GitHub vars/secrets
+  SERVICE_NAME: ""
+  SERVICE_PHASE: ""
+  DEPARTMENT_NAME: ""
+  DEPARTMENT_URL: ""
+  CONTACT_EMAIL: ""
+  CONTACT_PHONE: ""
+  SERVICE_URL: ""
+  SESSION_SECRET: ""
+  SESSION_NAME: ""
+  RATELIMIT_HEADERS_ENABLED: ""
+  RATELIMIT_STORAGE_URI: ""
+  RATE_LIMIT_MAX: ""
+  RATE_WINDOW_MS: ""
+  NODE_ENV: ""
   
 ingress:
   enabled: true
