--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,24 @@ jobs:
       - name: Run ESLint
         run: npm run lint
 
+  mocha-unit-tests:
+    name: Mocha Unit Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22.13.1'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run Mocha unit tests
+        run: npm run test
+
   code-security-audit:
     name: Code Security Audit
     runs-on: ubuntu-latest
@@ -97,6 +115,7 @@ jobs:
     environment: uat
     needs:
       - code-linting
+      - mocha-unit-tests
       - code-security-audit
       - snyk
       - build-image
