--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
 		"start-server.ts",
 		"config.ts",
 		"types/**/*.ts",
-		"test/unit/**/*.spec.ts"
+		"tests/unit/**/*.spec.ts"
 	],
 	"exclude": [
 		"node_modules",
