EL-2249: Set up Mocha unit tests (#69)
* EL-2249: Add Mocha Unit tests

If applied, this adds `mocha` & `chai` to repo, saves them as a dev dependency, creates a dummy test, adds a github action job to the deployment and adds a script so we can run `npm test`. It also does the following:

- adds a reporter so tests run come out nicely, which is helpful
- updates ignore list for ESLint
- creates a separate TS config and updates the `readme.md`
- changes the imports from '#config.js' to './config.js' in start-server.ts, so we can run this locally.
- add comments, that this test should be removed in the future.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,6 +91,14 @@ jobs:
           dockerfile_path: Dockerfile
           image_tag: ${{ github.sha }}
 
+  mocha-unit-tests:
+    name: Mocha Unit Tests
+    uses: ./.github/workflows/mocha.yml
+    needs:
+      - build-image
+    # Only run tests when deploying to UAT
+    if: success() && github.event_name != 'workflow_dispatch' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'uat' || github.event.inputs.environment == null)
+
   deploy-uat:
     name: Deploy feature branch to UAT
     runs-on: ubuntu-latest
@@ -100,6 +108,7 @@ jobs:
       - code-security-audit
       - snyk
       - build-image
+      - mocha-unit-tests
     permissions:
       id-token: write
       contents: read
