--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
 		"esbuild.ts",
 		"start-server.ts",
 		"config.ts",
-		"types/**/*.ts"
+		"types/**/*.ts",
+		"tests/unit/**/*.spec.ts"
 	],
 	"exclude": [
 		"node_modules",
