--- a/.github/actions/delete-uat-release/action.yml
+++ b/.github/actions/delete-uat-release/action.yml
@@ -1,18 +1,6 @@
 name: "Delete UAT deployment"
 description: 'Deletes a UAT deployment with a name that matches the merged or closed branch'
 inputs:
-  k8s_cluster:
-    description: "Kubernetes cluster name"
-    required: true
-  k8s_cluster_cert:
-    description: "Kubernetes cluster certificate"
-    required: true
-  k8s_namespace:
-    description: "Kubernetes cluster namespace"
-    required: true
-  k8s_token:
-    description: "Kubernetes authentication token"
-    required: true
   branch_name:
     description: "Optional branch name - inferred if not given"
     required: false
@@ -55,18 +43,12 @@ runs:
 
     - name: Authenticate to the cluster
       id: authenticate_to_cluster
-      shell: bash
-      env:
-        K8S_CLUSTER: ${{ inputs.k8s_cluster }}
-        K8S_CLUSTER_CERT: ${{ inputs.k8s_cluster_cert }}
-        K8S_NAMESPACE: ${{ inputs.k8s_namespace }}
-        K8S_TOKEN: ${{ inputs.k8s_token }}
-      run: |
-        echo "${K8S_CLUSTER_CERT}" > ./ca.crt
-        kubectl config set-cluster ${K8S_CLUSTER} --certificate-authority=./ca.crt --server=https://${K8S_CLUSTER}
-        kubectl config set-credentials circleci --token=${K8S_TOKEN}
-        kubectl config set-context ${K8S_CLUSTER} --cluster=${K8S_CLUSTER} --user=circleci --namespace=${K8S_NAMESPACE}
-        kubectl config use-context ${K8S_CLUSTER}
+      uses: ministryofjustice/laa-reusable-github-actions/.github/actions/authenticate_to_cluster@d61e0cf24795b75f719a8981a4dc21e1334a1455
+      with:
+        kube-cert: ${{ secrets.KUBE_CERT }}
+        kube-token: ${{ secrets.KUBE_TOKEN }}
+        kube-cluster: ${{ secrets.KUBE_CLUSTER }}
+        kube-namespace: ${{ secrets.KUBE_NAMESPACE }}
 
     - name: Delete UAT release
       id: delete_release
